--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/supabase-js": "^2.47.10",
+    "assemblyai": "^4.16.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "docx": "^8.5.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "formidable": "^3.5.4",
